--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+!DOCTYPE html>
+<html>
+    <head>
+        <meta lang="en-US">
+        <meta http-equiv="X-UA-Compatible" content="IE=7">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Xolisa Website</title>
+    </head>
+    <body>
+        <h1 style="text-align: center;"> Upcoming Web Developer: Xolisa</h1><hr/>
+        <h2 style="text-align: center;"><a href="./public/Movie.html">Movie Ranking Project</a></h2>
+        <img src="./assets/images/Movies.jpg" height="200" alt="Movie Ranking"/><hr/>
+        <h2 style="text-align: center;"><a href="./public/Birthday Invite.html">Birthday Invite</a></h2>
+        <img src="./assets/images/X.jpg" height="200" alt="Birthday Invite"/><hr/>
+        <a href="./public/about.html">About Me</a>| <a href="./public/contact.html">Contact Me</a>
+    </body>
+</html>
