--- a/index.html
+++ b/index.html
@@ -1,17 +1,124 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta lang="en-US">
-        <meta http-equiv="X-UA-Compatible" content="IE=7">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Xolisa Website</title>
-    </head>
-    <body>
-        <h1 style="text-align: center;"> Upcoming Web Developer: Xolisa</h1><hr/>
-        <h2 style="text-align: center;"><a href="./public/Movie.html">Movie Ranking Project</a></h2>
-        <img src="./assets/images/Movies.jpg" height="200" alt="Movie Ranking"/><hr/>
-        <h2 style="text-align: center;"><a href="./public/Birthday Invite.html">Birthday Invite</a></h2>
-        <img src="./assets/images/X.jpg" height="200" alt="Birthday Invite"/><hr/>
-        <a href="./public/about.html">About Me</a>| <a href="./public/contact.html">Contact Me</a>
-    </body>
-</html>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
+ </head>
+ <body>
+    <h1>Xolisa Jeke</h1><aside><img src="./WhatsApp Image 2025-02-27 at 08.01.51_05d2897b.jpg" height="200" alt="Xolisa Jeke"></aside>
+    <h2 style="text-align: center;">Summary</h2>
+     <p>
+        Results driven and organized professional with a strong passion for working with
+        numbers. While I have a proven track record of success as an academic tutor.I am
+        open to exploring opportunitiesacrossvariousindustries,particularlyin the
+        economic and finance sector.I am eager to leverage my analytical skills,
+        enthusiasm for learning,and dedication to growth to drive success in a dynamic
+        and forward-thinking organization
+    </p><br/>
+    <h2 style="text-align: center;">Education</h2>
+    <ul>
+        <li>
+            Holy Cross High School Grade 12(January 2018 - November 2018)<br/>
+        <ul>
+            <li>Subjects: Physical Science, Mathematics, Life Science, Life Orientation, English Home Language, Afrikaans, Accounting</li>
+        </ul>
+        </li>
+    </ul>
+    <ul>
+        <li>
+            Rhodes University
+            Bachelor of Commerce (BCom) in Accounting (February 2019 - November 2022)
+        </li><br/>
+        <ul>
+            <li>Incomplete degree</li>
+        </ul>
+    </ul>
+    <ul>
+        <li>
+            University of South Africa (UNISA)
+            Bachelor of Commerce (BCom) in Economics (Currently pursuing)
+    </li>
+    </ul>
+    </ul>
+    <ul>
+        <li>
+            <h3>Online Certificates</h3>
+        </li>
+        <uL>
+            <Li>TEFL Certification(Certificate in Teaching English as a Foreign Language)</Li>
+            <li>Alison Diploma in HTML5, CSS, and Javascript (Completed: 2023-05-21)</li>
+            <li>Alison Diploma in Financial Accounting</li>
+        </uL>
+    </ul>
+    <ul>
+        <li><h3>Certificates</h3></li>
+        <ul><li>Ikamva Youth Tutor Certificate</li></ul>
+    </ul><hr/>
+
+<h2 style="text-align: center;">Work Experience</h2>
+<ul>
+    <li><h3>Academic Tutor (Self-Employed)
+        East London, South Africa (August 2020 - Present)</h3></li>
+        <ul>
+            <li>Supported students in grades 6-12 with lesson plans and exam preparation</li>
+            <li>Developed and delivered engaging lessons using various resources and facilities</li>
+            <li>Worked with students from diverse backgrounds and cultures</li>
+            <li>Delivered lessons to students and kept them motivated to achieve their goals</li>
+            <li>Maintained administrative tasks, including performance tracking and attendance records</li>
+            <li>Provided additional guidance and support to students who required extra help</li>
+        </ul>
+</ul>
+<ul>
+    <li><h3>Academic Tutor
+        Maqubs Academy of Excellence, Grahamstown (June 2020 - December 2020)</h3></li>
+</ul>
+<ul>
+    <li><h3>Mentor
+        Accounting Department, Grahamstown (March 2020 - December 2020)</h3></li>
+        <ul>
+            <li>Mentored 1st-year accounting students, providing guidance and support to help them achieve academic success</li>
+            <li>Offered individualized support and feedback to students, helping them to overcome challenges and improve their understanding of accounting concepts</li>
+        </ul>
+</ul>
+<ul>
+<li><h3>Entertainment and Food Representative
+    Rhodes University, Grahamstown (January 2020 - December 2020)</h3></li>
+    <ul>
+        <li>Coordinated entertainment and food events for students</li>
+        <li>Worked with various stakeholders to ensure successful events</li>
+        <li>Addressed student concerns regarding food quality and reported them to the Warden and Hall Warden as necessary</li>
+        <li>Ensured that all food options catered to diverse dietary needs, including halal, African, vegetarian, and special allergy requirements</li>
+    </ul></ul>
+<ul>
+        <li><h3>Personal Assistant
+            GV Developments LTD/PTY (July 2024-1 August 2024) </h3></li>
+            <ul>
+                <li>Prepared draft quotes for clients based on project requirements</li>
+                <li>Researched and typed up detailed reports on damages and necessary repairs</li>
+                <li>Utilized strong organizational skills to manage multiple tasks and priorities</li>
+            </ul>
+</ul>
+<ul>
+    <li><h3>Waiter
+        Gala Dinner Event, Rhodes University (April 2022)</h3></li>
+        <ul>
+            <li>Provided exceptional customer service to guests during the graduation ceremony gala dinner</li>
+            <li>Ensured timely and efficient service delivery, maintaining a high level of professionalism and attention to detail
+            </li>
+            <li></li>
+        </ul>
+</ul><hr/>
+<h2 style="text-align: center;">Skills</h2>
+<ul>
+    <li>Excel (Computer Science 112)</li>
+    <li>Sage Group (Information Systems 203)</li>
+    <li>Excellent communication and interpersonal skills</li>
+    <li>Strong leadership and team management skills</li>
+    <li>Ability to work under pressure and manage multiple priorities</li>
+    <li>Proficient in curriculum development and implementation</li>
+</ul>
+<a href="./Hobbies.html">Hobbies</a>|<a href="./Co.html">Contact Details</a><br/>
+ </body><br/>
+ <footer>CONFIDENTIALITY NOTICE: This curriculum vitae (CV) is confidential and intended solely for the recipient's personal use. It is not to be copied, reproduced, or distributed in any manner without the express written consent of Xolisa Jeke. Copyright 2025 Xolisa. All rights reserved."</footer>
+ </html>
